fix(RuleList): update help doc label and location update to correct spacing (#1875)
* fix(RuleList): move cta to table header area

* fix(RuleList): move cta to table header area

* fix: failing build

* fix: failing build

* fix lint

* fix: address comments

* fix: letter spacing:

--- a/src/pages/settings/rules/RulesView.less
+++ b/src/pages/settings/rules/RulesView.less
@@ -1,9 +1,4 @@
 :local {
-    .link span {
-        font-size: 12px;
-        font-weight: 500;
-    }
-
     .info {
         padding-left: 30px;
         padding-bottom: 16px;
